# pdf-fusion-pro_ultimate

./: .babelignore  .dockerignore  .env  .gitattributes  .gitignore  =0.2.0  Dockerfile  Procfile  README.md  add_all_864_texts.sh  add_footer_and_extract.sh  add_missing_texts.sh  ads.txt  app.py  app_old.py  auto_ar.po  babel.cfg  babel_new.cfg  build.sh  check.py  check_all_langs.sh  check_contacts.py  check_final_routes.py  check_messages.py  check_routes.py  clean_and_fix_all.py  clean_ar.po  clean_po.py  cleanup.sh  complete_missing.py  complete_rebuild.sh  config.py  conversion_strings.pot  conversion_strings_extracted.txt  convert_it_to_ar.py  cookies.txt  debug_app.py  debug_templates.py  diagnostic.py  expand_translations.py  (+54 more)
blueprints/: __init__.py  admin.py  conversion.py  conversion.py.bak  debug.py  monetization.py
data/: ratings.json
managers/: __init__.py  contact_manager.py  conversion_manager.py  rating_manager.py
scripts/: check_final.py  check_translations.py  clean_po_duplicates.py  fill_all_empty_translations.py  fill_all_translations.py  fix_duplicates_polib.py  fix_empty_msgid.py  fix_format_string.py  fix_no_format.sh  fix_percent.py  fix_placeholders.py  fix_placeholders_report.py  fix_po_orphans.py  fix_specific_lines.py  init_translations.sh  list_exact_remaining.py  quick_fill.py  remove_duplicates.py  translate_all_languages.py  translate_po.py  update_translations.sh
services/: ocr_excel_converter.py
static/: google-site-verification: google6f0d847067bbd18a.html
templates/: base.html  base_legal.html  rating.html
utils/: cache.py  (+13 more)
(+358 files in other folders)
