[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-fusion-pro"
version = "1.0.0"
description = "PDF Fusion Pro Ultimate"
requires-python = ">=3.8,<3.12"
dependencies = [
    "Flask==3.0.0",
    "Werkzeug==3.0.1",
    "gunicorn==21.2.0",
    "PyPDF2==3.0.1",
    "PyMuPDF==1.26.7",
    "pytesseract==0.3.13",
    "pdf2image==1.17.0",
    "opencv-python-headless==4.13.0.92",
    "Pillow==12.1.0",
    "pandas==2.2.2",
    "openpyxl==3.1.5",
    "reportlab==4.0.4",
    "python-docx==1.2.0",
    "img2pdf==0.6.3",
    "requests==2.32.3",
    "Flask-Mail==0.9.1",
    "Flask-WTF==1.2.1",
    "WTForms==3.1.2",
    "numpy==1.26.4",
]

[tool.render]
python-version = "3.11.7"
